# PRISM

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.prism/: AGENTS.md  injected-context.md  quality-gates.yaml
docs/: getting-started.md
easy_reserve/: AGENTS.md
easy_reserve/.prism/: AGENTS.md  PRISM.md  injected-context.md  listener.pid  project.yaml
easy_reserve/.prism/spec/protocol/: AGENT.md
prism/: config.py  project.py
prism/agents/: __init__.py  compatibility.py  config.py  context_generator.py  launcher.py
prism/board/: __init__.py  flux_client.py  task_mapper.py  webhook_listener.py
prism/cli/: __init__.py  approve.py  attach.py  augment.py  board.py  config_cmd.py  generate_context.py  health.py  index.py  init.py  inject.py  memory.py  optimize.py  reject.py  resume.py  review.py  schedule.py  seed.py  shell.py  skill.py  start.py  submit.py  sync.py  task.py
prism/docker/: Dockerfile.test  __init__.py  docker-compose.test.yml  entrypoint.sh
prism/memory/: __init__.py  auditor.py  compressor.py  conflict.py  dedup.py  evaluator.py  injector.py  promoter.py  schemas.py  stale.py  store.py
prism/pipeline/: __init__.py  container_manager.py  orchestrator.py  pr_manager.py  quality_gates.py
prism/qa/: __init__.py  approval_workflow.py  container_access.py
prism/spec/: __init__.py  augmenter.py  watcher.py
prism/speckit/: __init__.py  watcher.py
prism/templates/: AGENTS.md.template  PRISM.md.template  prism.config.yaml.template  project.yaml.template
prism/templates/skills/seed/: audit-website.md  cicd-github-actions-basic.md  docker-compose-dev.md  error-handling-patterns.md  frontend-design.md  git-conventional-commits.md  (+9 more)
prism/utils/: git.py  permissions.py  yaml_utils.py
prism/webhook/: __init__.py  flux_done_handler.py
test_prism_init3/.prism/: AGENTS.md  PRISM.md  project.yaml
tests/: conftest.py  test_agents.py  test_attach.py  test_board.py  test_board_integration.py  test_config.py  test_init.py  test_memory.py  test_optimizer.py  test_pipeline.py
