[project]
name = "prism-cli"
version = "0.1.0"
description = "PRISM — Project Reasoning & Intelligent Skill Memory"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-frontmatter>=1.0",
    "anthropic>=0.40",
    "gitpython>=3.1",
    "tiktoken>=0.7",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "watchdog>=3.0",
    "httpx>=0.27",
    "docker>=7.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
embeddings = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24",
]

[project.scripts]
prism = "prism.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["prism/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
